--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport:" content="width=device-width, initial-scale=1.0">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/modale.css" rel="stylesheet">
-
-
-
-
+  <link rel="stylesheet"  href="css/style.css" />
 
 
   </head>
@@ -211,6 +208,10 @@
   <div id="timer"></div>
 </div>
 
+
+<div id="map"></div>
+
+
 <!--
 < Trigger/Open The Modal
 <button id="myBtn">Open Modal</button>
@@ -259,11 +260,16 @@
 -->
   </body>
 
+<script src=js/maps.js></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk-UA07l9pellZaXdMjWOZkQmionsIZRk&callback=initMap&libraries=&v=weekly&channel=2" async></script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <script src=js/timer.js></script>
 <script src=js/menu.js></script>
 <script src=js/reservation.js></script>
 <script src=js/showreservation.js></script>
 <script src=js/checkreservation.js></script>
+
+
 
   <footer> creer par blalbal</footer>
   </html>
