--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
   <div id="timer"></div>
 </div>
 
-
+<br>
 <div id="map"></div>
-
+<br>
+<div id="meteo"></div>
 
 <!--
 < Trigger/Open The Modal
@@ -268,6 +269,7 @@
 <script src=js/reservation.js></script>
 <script src=js/showreservation.js></script>
 <script src=js/checkreservation.js></script>
+<script src=js/meteo.js></script>
 
 
 
